	PR c++/27819 	* decl.c (cp_finish_decl): Process initializers for static data 	members with non-dependent initializers, even in templates. 	PR c++/27722 	* decl.c (maybe_deduce_size_from_array_init): If the declaration 	is erroneous, give it an erroneous type. 	(layout_var_decl): If the type is erroneous, give up. 	(check_initializer): Likewise. 	PR c++/27807 	* cp-tree.h (TYPE_OBJ_P): New macro. 	(TYPE_PTROB_P): Use it. 	(TYPE_REF_OBJ_P): Likewise. 	* semantics.c (finish_compound_literal): Do not permit compound 	literals of non-object types. 	PR c++/27806 	* typeck.c (original_type): Robustify. 	PR c++/27819 	* g++.dg/template/static25.C: New test. 	PR c++/27722 	* g++.dg/init/array21.C: New test. 	PR c++/27807 	* g++.dg/ext/complit7.C: New test.

PR c++/27806
	* g++.dg/parse/ptrmem5.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114382 138bc75d-0d04-0410-961f-82ee72b054a4