gcc/testsuite/g++.dg/parse/ptrmem5.C
@@ -1,0 +1,9 @@
+// PR c++/27806
+
+struct A {};
+
+void foo()
+{
+  p;  // { dg-error "p" }
+  extern int A::* p;
+}
